public/style.css
body {
  font-family: sans-serif;
  padding: 0;
  margin: 0;
  color: #db4855;
}

a {
  text-decoration: none;
  color: white;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em;
}

form div {
  margin: 1em;
  display: inline-block;
}
#app {
  display: flex;
  justify-content: flex-start;
  margin: 0;
}
.navBar {
  width: 33.3vw;
  height: 95vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  background-image: url(/cubes.png);
}
.gone {
  display: none;
}
#navLogo {
  width: 25vw;
  transition: all 1s ease;
}
#navLogo:hover {
  transform: scale(1.05);
}
#landLogo {
  width: 25vw;
  margin-top: 3vh;
  transition: all 1s ease;
}
#landLogo:hover {
  transform: scale(1.05);
}
#main {
  margin: 0;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 95vh;
  width: 66.6vw;
  background: rgb(255, 246, 246);
  background: linear-gradient(
    180deg,
    rgba(255, 246, 246, 1) 0%,
    rgba(252, 233, 235, 1) 70%,
    rgba(249, 178, 184, 0.9822303921568627) 100%
  );
}
.gallery {
  margin: 0;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.innerMain {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.center {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.project {
  display: flex;
  flex-direction: column;
  border-radius: 25px;
  align-items: center;
  justify-content: space-evenly;
  width: 20vw;
  height: 20vh;
  background: #e7efee;
  margin-left: 2vw;
  margin-right: 2vw;
  margin-top: 2vh;
  margin-bottom: 2vh;
  padding-left: 2vw;
  padding-right: 2vw;
  padding-top: 2vh;
  padding-bottom: 2vh;
  border: solid #db4855 3px;
}
.singleProject {
  display: flex;
  flex-direction: column;
  border-radius: 25px;
  align-items: center;
  justify-content: space-evenly;
  width: 50vw;
  height: 75vh;
  background: #e7efee;
  margin-left: 2vw;
  margin-right: 2vw;
  margin-top: 2vh;
  margin-bottom: 2vh;
  padding-left: 2vw;
  padding-right: 2vw;
  padding-top: 2vh;
  padding-bottom: 2vh;
}

.project-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
#thumbnail {
  /* display: block; */
  width: 10vw;
}

/* CSS */
.fancyButton {
  background: linear-gradient(to bottom right, #c4d4d3, #7ea09b);
  width: 13vw;
  height: 4vh;
  margin: 15px;

  border: 0;
  border-radius: 12px;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial,
    sans-serif;
  font-size: 1.5vw;
  /* font-weight: 500;
  line-height: 2.5; */
  outline: transparent;
  padding: 0 1rem;
  text-align: center;
  text-decoration: none;
  transition: box-shadow 0.2s ease-in-out;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  white-space: nowrap;
  transition: all 1s ease;
}
.superFancyButton {
  background: linear-gradient(to bottom right, #c4d4d3, #7ea09b);
  width: 19vw;
  height: 7vh;
  margin: 15px;
  border: solid;
  border-color: #db4855;
  border-width: 3px;
  border-radius: 12px;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: "Bebas Neue", Arial, Helvetica, sans-serif;
  font-size: 1.5rem;
  /* font-weight: 500;
  line-height: 2.5; */
  outline: transparent;
  padding: 0 1rem;
  text-align: center;
  text-decoration: none;
  transition: box-shadow 0.2s ease-in-out;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  white-space: nowrap;
  transition: all 1s ease;
  letter-spacing: 0.07em;
}

.fancyButton:not([disabled]):hover {
  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5), -0.125rem -0.125rem 1rem #db4855,
    0.125rem 0.125rem 1rem #f6fff9;
  transform: scale(1.1);
}
.superFancyButton:not([disabled]):hover {
  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5), -0.125rem -0.125rem 1rem #db4855,
    0.125rem 0.125rem 1rem #f6fff9;
  transform: scale(1.2);
}
#makeBlock {
  display: block;
}

#modal-container {
  background: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  left: 0;
  /* vw and vh */
  width: 100vw;
  height: 95vh;
  z-index: 2;

  /*flex stuff below*/
  display: flex;
  /* alignment on the MAIN axis (default horizontal) */
  justify-content: center;
  /* alignment on the CROSS axis (default vertical) */
  align-items: center;
}

#modal-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 25px;
  width: 33vw;
  height: 33vh;
  background: #fff6f6;
}

#rotoflo-modal {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 25px;

}

#rotoflo-modal input{
background: transparent;
border-top: none;
border-left: none;
border-right: none;
border-bottom: solid #db4855;
color: #db4855;
align-items: center;
justify-content: center;
}
#rotoflo-modal input:focus {
  outline: none;
}

.custom-dropdown {
  background-color: #bad3d2;
  color: #fff;
  font-size: inherit;
  padding: 0.5em;
  padding-right: 2.5em;
  border: 1px solid white;

  margin: 1vw;
  border-radius: 3px;
  text-indent: 0.01px;
  text-overflow: "";
  -webkit-appearance: button; /* hide default arrow in chrome OSX */
  transition: all 1s ease;
}
.custom-dropdown::before,
.custom-dropdown::after {
  content: "";
  position: absolute;
  pointer-events: none;
}

.custom-dropdown::after {
  /*  Custom dropdown arrow */
  content: "\25BC";
  height: 1em;
  font-size: 0.625em;
  line-height: 1;
  right: 1.2em;
  top: 50%;
  margin-top: -0.5em;
}

.custom-dropdown::before {
  /*  Custom dropdown arrow cover */
  width: 2em;
  right: 0;
  top: 0;
  bottom: 0;
  border-radius: 0 3px 3px 0;
}

.custom-dropdown select[disabled] {
  color: rgba(0, 0, 0, 0.3);
}

.custom-dropdown select[disabled]::after {
  color: rgba(0, 0, 0, 0.1);
}

.custom-dropdown::before {
  background-color: rgba(0, 0, 0, 0.15);
}

.custom-dropdown::after {
  color: rgba(0, 0, 0, 0.4);
}

.custom-dropdown:hover {
  background-color: #7ea09b;
}
.header {
  color: #db4855;
  font-family: "Bungee Outline", cursive;
  font-size: 2.5rem;
  text-shadow: 3px 3px #ffb1b1;

  text-align: center;
  margin-left: 1vw;
  margin-right: 1vw;
  margin-top: 1vh;
  margin-bottom: 1vh;
  padding-left: 2vw;
  padding-right: 2vw;
  padding-top: 2vh;
  padding-bottom: 2vh;
  border-radius: 25px;
}
.headerNav {
  color: #db4855;
  font-family: "Bungee Outline", Arial, Helvetica, sans-serif;
  font-size: 3.5rem;
  text-shadow: 3px 3px #ffb1b1;
  text-align: center;
  margin-left: 2vw;
  margin-right: 2vw;
  margin-top: 2vh;
  margin-bottom: 2vh;
  padding-left: 2vw;
  padding-right: 2vw;
  padding-top: 2vh;
  padding-bottom: 2vh;
  border-radius: 25px;
  margin: 10px;
}
.headerLand {
  color: #db4855;
  font-family: "Bungee Outline", Arial, Helvetica, sans-serif;
  font-size: 5.5rem;
  text-shadow: 3px 3px #ffb1b1;
  text-align: center;
  margin-left: 2vw;
  margin-right: 2vw;
  margin-top: 2vh;
  margin-bottom: 2vh;
  padding-left: 2vw;
  padding-right: 2vw;
  padding-top: 2vh;
  padding-bottom: 2vh;
  border-radius: 25px;
  margin: 10px;
}
.subHeader {
  text-align: center;
  color: white;
  display: flex;
  font-family: "Bebas Neue", Arial, Helvetica, sans-serif;
  font-size: 2rem;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: rgba(255, 78, 93, 0.281);
  padding: 10px;
  margin-top: 3px;
  margin-bottom: 3px;
  margin-left: 10px;
  margin-right: 10px;
  letter-spacing: 0.1em;
  border-radius: 25px;
}
.landing {
  background-image: url(/cubes.png);
  width: 100vw;
  height: 95vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.countDown {
  color: #db4855;
  font-size: 2rem;
}

.video-thumbnails {
  height: 5vh;
  width: 5vw;
  border-radius: 25px;
}

.footer_info {
  height: 5vh;
  width: 100vw;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  font-size: 0.7rem;
  background-color: #e7efee;
  margin: 0;
}

#webcam {
  border-radius: 25px;
  border: solid #7ea09b 3px;
  /* box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5), -0.125rem -0.125rem 1rem #db4855,
    0.125rem 0.125rem 1rem #f6fff9; */
}

#canvas {
  border-radius: 25px;
}

.Auth-Form-Input {
  background: transparent;
  border-top: none;
  border-left: none;
  border-right: none;
  border-bottom: solid #db4855;
  color: #db4855;
}
.Auth-Form-Input:focus {
  outline: none;
}

::placeholder {
  color: #db4855;

  opacity: .5;
}
.about-main-div{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  color: #7ea09b;
  font-family: 'Ubuntu', sans-serif;
  letter-spacing: 0.1em;
} 

.team-div{
  display:flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 15em;
  width: 15em;
  padding: 1em;
}

.dev-img{
  height: 12em;
  width: 12em;
}

#bio-div{
  display:flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 2em;
  font-family: 'Ubuntu', sans-serif;
}

.team-div a{
  color: #db4855;
  font-weight: 500;
  transition: all 1s ease;

}

.team-div a:hover {
  transform: scale(1.2);
}

